--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ worker_processes auto;
 events {}
 stream {
     upstream backend {
-        server ib.maxfree.win:443;
+        server 164.92.207.132:80;
     }
     server {
         listen 8080;
